# agentsave-dashboard

./: .env  .env.example  .gitignore  README.md  _e2e_server.py  _e2e_setup.py  agentsave.db  demo.db  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.superpowers/sdd/briefs/: dashboard-complete-report.md
agentsave_dashboard/: auth.py  cli.py  config.py  database.py  db.py  license.py  main.py  models.py
agentsave_dashboard/keys/: public.pem
agentsave_dashboard/routers/: billing.py  events.py  health.py  metrics.py  runs.py  test_utils.py  tokens.py
agentsave_dashboard/services/: aggregator.py  billing_service.py  metrics_service.py  retention.py
scripts/: generate_license.py  private.pem
tests/: conftest.py  test_auth.py  test_billing.py  test_config.py  test_database.py  test_db.py  test_endpoints.py  test_events.py  test_integration.py  test_license.py  test_metrics.py  test_models.py  test_retention.py  test_tokens.py
