[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agentsave-dashboard"
version = "0.1.0"
description = "Self-hosted AgentSave dashboard backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aditya Kumar Singh", email = "its.aks@outlook.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "PyJWT[crypto]>=2.8.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
agentsave-dashboard = "agentsave_dashboard.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agentsave_dashboard"]
